@@ -1,5 +1,10 @@
 2002-12-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03570] meta tag in frame
+	* frame.c (createFrameFile): fix meta equiv parse in frame
+
+2002-12-15  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03569] Re: preserve timestamp
 	* file.c (loadGeneralFile): PresetveTimestamp
 		(_doFileCopy): is_pipe, PreserveTimestamp
@@ -5858,4 +5863,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.620 2002/12/14 15:24:03 ukai Exp $
+$Id: ChangeLog,v 1.621 2002/12/14 15:28:37 ukai Exp $
